--- a/helm/fineract/Chart.yaml
+++ b/helm/fineract/Chart.yaml
@@ -17,7 +17,7 @@
 apiVersion: v2
 appVersion: "1.0"
 description: "Apache Fineract: A Platform for Microfinance"
-name: finteract
+name: fineract
 version: 0.1.0
 dependencies:
   - name: mysql
