--- a/templates/DeployHelmPackage.yml
+++ b/templates/DeployHelmPackage.yml
@@ -51,6 +51,6 @@ steps:
       command: 'upgrade'
       chartType: 'FilePath'
       chartPath: ${{ parameters.chartPackage }}
-      releaseName: ${{ parameters.apiName }}-${{ parameters.k8sNamespace }}
+      releaseName: ${{ parameters.apiName }}
       valueFile: ${{ parameters.releaseValuesFile }}
       arguments: '--create-namespace'
