--- a/azure_pipeline-CD.yaml
+++ b/azure_pipeline-CD.yaml
@@ -35,6 +35,7 @@ stages:
     strategy:
       runOnce:
         deploy:
+          steps:
           - template: templates/SetDnsRecords.yml
             parameters:
               azureSubscription: '$(AzureSubscription)'
