--- a/templates/DeployHelmPackage.yml
+++ b/templates/DeployHelmPackage.yml
@@ -53,4 +53,4 @@ steps:
       chartPath: ${{ parameters.chartPackage }}
       releaseName: ${{ parameters.apiName }}-${{ parameters.k8sNamespace }}
       valueFile: ${{ parameters.releaseValuesFile }}
-      arguments: '--create-namespace'
+      arguments: '--create-namespace --timeout 450'
